Change title from 'Service Form Hub' to 'Audit Schedule Generator Hub'

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 </head>
 <body>
   <div class="container">
-    <h1>Client Information – Service Form Hub</h1>
+    <h1>Audit Schedule Generator Hub</h1>
 
     <table>
       <thead>
